<?xml version="1.0"?>
<package format="2">
  <name>isaac_sim_pointcloud_full_publisher</name>
  <version>0.0.0</version>
  <description>Augments LiDAR PCD Data with Intensity, Ring and Time Field Data</description>
  <maintainer email="ashok.kumarj@icloud.com">regastation</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <export>
  </export>
</package>
